[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 858, 0 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 0, 525 )
b = Vector2( 858, 525 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 0, 525 )

[sub_resource type="SegmentShape2D" id=6]
b = Vector2( 0, 525 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Screen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.109804, 0.101961, 1 )

[node name="Upper Boundary" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Upper Collision" type="CollisionShape2D" parent="Upper Boundary"]
shape = SubResource( 1 )

[node name="Lower Boundary" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Lower Collision" type="CollisionShape2D" parent="Lower Boundary"]
shape = SubResource( 2 )

[node name="Player Goal" type="Area2D" parent="."]

[node name="Player Goal Collision" type="CollisionShape2D" parent="Player Goal"]
position = Vector2( -3, 0 )
shape = SubResource( 5 )

[node name="Enemy Goal" type="Area2D" parent="."]

[node name="Enemy Goal Collision" type="CollisionShape2D" parent="Enemy Goal"]
position = Vector2( 861, 0 )
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 47, 240 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 809, 232 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 419, 263 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Reset Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Player Goal" to="." method="_on_Player_Goal_body_entered"]
[connection signal="body_entered" from="Enemy Goal" to="." method="_on_Enemy_Goal_body_entered"]
[connection signal="_start_game" from="HUD" to="." method="_on_HUD__start_game"]
[connection signal="timeout" from="Reset Timer" to="." method="_on_Reset_Timer_timeout"]
